--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # requirements.txt
 streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
+pandas>=2.2.0
+numpy>=2.0.0
 plotly==5.15.0
 scikit-learn==1.3.0
 folium==0.14.0
