--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-# requirements.txt
 streamlit==1.28.0
 pandas>=2.2.0
 numpy>=2.0.0
 plotly==5.15.0
-scikit-learn==1.3.0
+scikit-learn>=1.6.0   # ← updated
 folium==0.14.0
 streamlit-folium==0.17.0
 geopy==2.3.0
 faker==19.9.0
 requests==2.31.0
 joblib==1.3.2
+
